demos/c_cpp_includes/dtwainx.h

LONG           DLLENTRY_DEF      DTWAIN_GetAPIHandleStatus(DTWAIN_HANDLE pHandle);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValues(DTWAIN_SOURCE Source,LONG  lCap,LONG  lGetType,LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValuesEx(DTWAIN_SOURCE Source,LONG  lCap,LONG  lGetType,LONG  lContainerType,LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapValuesEx2( DTWAIN_SOURCE Source,LONG lCap,LONG lGetType,LONG lContainerType,LONG nDataType,LPDTWAIN_ARRAY pArray );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_EnumSupportedCapsEx2(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetCapOperations(DTWAIN_SOURCE Source,LONG lCapability,LPLONG  lpOps);
LONG           DLLENTRY_DEF      DTWAIN_GetCapArrayType(DTWAIN_SOURCE Source, LONG nCap);
LONG           DLLENTRY_DEF      DTWAIN_GetCapDataType(DTWAIN_SOURCE Source, LONG nCap);
LONG           DLLENTRY_DEF      DTWAIN_GetCapContainerEx(LONG nCap,DTWAIN_BOOL bSetContainer,LPDTWAIN_ARRAY ConTypes);
LONG           DLLENTRY_DEF      DTWAIN_GetCapContainer(DTWAIN_SOURCE Source, LONG nCap,LONG lCapType);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetAcquireArea(DTWAIN_SOURCE Source,LONG lGetType,LPDTWAIN_ARRAY FloatEnum);
/* DTWAIN Frame functions */
DTWAIN_FRAME   DLLENTRY_DEF      DTWAIN_FrameCreate(DTWAIN_FLOAT Left, DTWAIN_FLOAT Top, DTWAIN_FLOAT Right,DTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameDestroy(DTWAIN_FRAME Frame);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameSetAll(DTWAIN_FRAME Frame,DTWAIN_FLOAT Left,DTWAIN_FLOAT Top, DTWAIN_FLOAT Right,DTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameGetAll(DTWAIN_FRAME Frame,LPDTWAIN_FLOAT Left,LPDTWAIN_FLOAT Top, LPDTWAIN_FLOAT Right,LPDTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameGetValue(DTWAIN_FRAME Frame, LONG nWhich, LPDTWAIN_FLOAT Value);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameSetValue(DTWAIN_FRAME Frame, LONG nWhich, DTWAIN_FLOAT Value);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameIsValid(DTWAIN_FRAME Frame);
/* Use when a buffered transfer has sent a tile or strip */
HANDLE         DLLENTRY_DEF      DTWAIN_GetBufferedTransferInfo(DTWAIN_SOURCE Source, LPDWORD Compression, LPDWORD BytesPerRow, LPDWORD Columns, LPDWORD Rows, LPDWORD XOffset, LPDWORD YOffset, LPDWORD Flags, LPDWORD BytesWritten, LPDWORD MemoryLength);
HANDLE         DLLENTRY_DEF      DTWAIN_GetAcquiredImage( DTWAIN_ARRAY aAcq, LONG nWhichAcq, LONG nWhichDib );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_GetAcquiredImageArray(DTWAIN_ARRAY aAcq, LONG nWhichAcq);
HANDLE         DLLENTRY_DEF      DTWAIN_GetCurrentAcquiredImage( DTWAIN_SOURCE Source );
LONG           DLLENTRY_DEF      DTWAIN_GetCurrentPageNum( DTWAIN_SOURCE Source );
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetContrast( DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Contrast);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetBrightness( DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Brightness);
LONG                 DLLENTRY_DEF    DTWAIN_EnumXResolutionValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
LONG                 DLLENTRY_DEF    DTWAIN_EnumYResolutionValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
DTWAIN_ARRAY         DLLENTRY_DEF    DTWAIN_EnumXResolutionValuesEx(DTWAIN_SOURCE Source, DTWAIN_BOOL bExpandIfRange);
DTWAIN_ARRAY         DLLENTRY_DEF    DTWAIN_EnumYResolutionValuesEx(DTWAIN_SOURCE Source, DTWAIN_BOOL bExpandIfRange);
/* Force bits-per-pixel for acquired images */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_ForceAcquireBitDepth( DTWAIN_SOURCE Source, LONG BitDepth );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceNotifications(DTWAIN_SOURCE Source, LPLONG DevEvents);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEvent(DTWAIN_SOURCE Source, LPLONG lpEvent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEventEx(DTWAIN_SOURCE Source, LPLONG lpEvent, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDeviceEventInfo(DTWAIN_SOURCE Source, LONG nWhichInfo, LPVOID pValue);
/* Compression support for buffered transfer */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetCompressionType(DTWAIN_SOURCE Source, LPLONG lpCompression, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetCompressionSize( DTWAIN_SOURCE Source, LPLONG lBytes );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumTwainPrinters(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY lpAvailPrinters);
DTWAIN_ARRAY DLLENTRY_DEF DTWAIN_EnumTwainPrintersEx(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumTwainPrintersArray(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_ARRAY DLLENTRY_DEF DTWAIN_EnumTwainPrintersArrayEx(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_FeedPage(DTWAIN_SOURCE Source);
/* Duplex Scanner support */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDuplexType(DTWAIN_SOURCE Source, LPLONG lpDupType);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBitDepth(DTWAIN_SOURCE Source, LPLONG BitDepth, DTWAIN_BOOL bCurrent);
/* Support for CAP_CUSTOMDSDATA */
HANDLE DLLENTRY_DEF DTWAIN_GetCustomDSData(DTWAIN_SOURCE Source, LPBYTE Data, DWORD dSize, LPDWORD pActualSize,LONG nFlags);
LONG        DLLENTRY_DEF DTWAIN_GetCurrentRetryCount(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireArea2(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT left, LPDTWAIN_FLOAT top,LPDTWAIN_FLOAT right, LPDTWAIN_FLOAT bottom, LPLONG lpUnit);
/*******************************************************************/

/* Functions to control the strip size of buffered transfer. */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireStripSizes(DTWAIN_SOURCE Source, LPDWORD lpMin, LPDWORD lpMax, LPDWORD lpPreferred);
HANDLE      DLLENTRY_DEF DTWAIN_GetAcquireStripBuffer(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireStripData(DTWAIN_SOURCE Source, LPLONG lpCompression, LPDWORD lpBytesPerRow, LPDWORD lpColumns, LPDWORD lpRows, LPDWORD XOffset,LPDWORD YOffset, LPDWORD lpBytesWritten);
/* Uninitializes the Extended Inmage information interface.  This also must be called  */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FreeExtImageInfo(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FlushAcquiredPages(DTWAIN_SOURCE Source);
/*************************************************************************************/
/* Miscellaneous DIB functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FlipBitmap( HANDLE hDib );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumSupportedCapsEx( DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumSupportedExtImageInfo(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumTopCameras(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY Cameras);
LONG DLLENTRY_DEF DTWAIN_GetBlankPageAutoDetection(DTWAIN_SOURCE Source);
/* CAP_ALARMVOLUME */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAlarmVolume(DTWAIN_SOURCE Source, LPLONG lpVolume);
/* CAP_BATTERYMINUTES */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBatteryMinutes( DTWAIN_SOURCE Source, LPLONG lpMinutes );
/* CAP_BATTERYPERCENTAGE */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBatteryPercent( DTWAIN_SOURCE Source, LPLONG lpPercent );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetDoubleFeedDetectLength(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Value, DTWAIN_BOOL bCurrent);
/* Gets all the current double feed detect values that are set*/
DTWAIN_BOOL DLLENTRY_DEF  DTWAIN_GetDoubleFeedDetectValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
LONG                 DLLENTRY_DEF    DTWAIN_EnumThresholdValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
DTWAIN_ARRAY         DLLENTRY_DEF    DTWAIN_EnumThresholdValuesEx(DTWAIN_SOURCE Source, DTWAIN_BOOL bExpandIfRange);
/* Error buffer access */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetErrorBuffer(LPDTWAIN_ARRAY ArrayBuffer);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FreeMemory(HANDLE h);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FreeMemoryEx(HANDLE h);
/* New Twain 2.4 Metrics function*/
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireMetrics(DTWAIN_SOURCE source, LPLONG ImageCount, LPLONG SheetCount);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ForceScanOnNoUI(DTWAIN_SOURCE Source, BOOL bSet);
/* Get Current TWAIN triplet information being processed
  (use for DTWAIN_TN_TWAINTRIPLETBEGIN and DTWAIN_TN_TWAINTRIPLETEND notifications) */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetCurrentTwainTriplet(TW_IDENTITY* pAppID, TW_IDENTITY* pSourceID, LPLONG lpDG, LPLONG lpDAT, LPLONG lpMsg, LPLONG64 lpMemRef);