demos/Python/dtwain.py

     theDLL.DTWAIN_EnumSupportedCapsEx.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_EnumSupportedCapsEx2.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_EnumSupportedExtImageInfo.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_EnumThresholdValues.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p), ct.c_long]
     theDLL.DTWAIN_EnumThresholdValuesEx.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_EnumTopCameras.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_EnumTwainPrinters.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_EnumTwainPrintersArray.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_EnumTwainPrintersArrayEx.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_EnumTwainPrintersEx.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_EnumXResolutionValues.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p), ct.c_long]
     theDLL.DTWAIN_EnumXResolutionValuesEx.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_EnumYResolutionValues.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p), ct.c_long]
     theDLL.DTWAIN_EnumYResolutionValuesEx.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ExecuteOCR.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ExecuteOCRA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_ExecuteOCRW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_FeedPage.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FlipBitmap.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FlushAcquiredPages.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_ForceAcquireBitDepth.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_ForceScanOnNoUI.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_FrameCreate.argtypes = [ct.c_double, ct.c_double, ct.c_double, ct.c_double]
     theDLL.DTWAIN_FrameCreateString.argtypes = [ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameCreateStringA.argtypes = [ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_FrameCreateStringW.argtypes = [ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameDestroy.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FrameGetAll.argtypes = [ct.c_void_p, ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_FrameGetAllString.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameGetAllStringA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_FrameGetAllStringW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameGetValue.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_FrameGetValueString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_FrameGetValueStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_FrameGetValueStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_FrameIsValid.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FrameSetAll.argtypes = [ct.c_void_p, ct.c_double, ct.c_double, ct.c_double, ct.c_double]
     theDLL.DTWAIN_FrameSetAllString.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameSetAllStringA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_FrameSetAllStringW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_FrameSetValue.argtypes = [ct.c_void_p, ct.c_long, ct.c_double]
     theDLL.DTWAIN_FrameSetValueString.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_FrameSetValueStringA.argtypes = [ct.c_void_p, ct.c_long, ct.c_char_p]
     theDLL.DTWAIN_FrameSetValueStringW.argtypes = [ct.c_void_p, ct.c_long, ct.c_wchar_p]
     theDLL.DTWAIN_FreeExtImageInfo.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FreeMemory.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_FreeMemoryEx.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetAPIHandleStatus.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetAcquireArea.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetAcquireArea2.argtypes = [ct.c_void_p, ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_double), ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAcquireArea2String.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAcquireArea2StringA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAcquireArea2StringW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAcquireMetrics.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long), ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAcquireStripBuffer.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetAcquireStripData.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong)]
     theDLL.DTWAIN_GetAcquireStripSizes.argtypes = [ct.c_void_p, ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong)]
     theDLL.DTWAIN_GetAcquiredImage.argtypes = [ct.c_void_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_GetAcquiredImageArray.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMPath.argtypes = [ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMPathA.argtypes = [ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMPathW.argtypes = [ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMVersionInfo.argtypes = [ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMVersionInfoA.argtypes = [ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_GetActiveDSMVersionInfoW.argtypes = [ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetAlarmVolume.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetAppInfo.argtypes = [ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetAppInfoA.argtypes = [ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p]
     theDLL.DTWAIN_GetAppInfoW.argtypes = [ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetAuthor.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetAuthorA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_GetAuthorW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetBatteryMinutes.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetBatteryPercent.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetBitDepth.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long), ct.c_long]
     theDLL.DTWAIN_GetBlankPageAutoDetection.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetBrightness.argtypes = [ct.c_void_p, ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_GetBrightnessString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetBrightnessStringA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_GetBrightnessStringW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetBufferedTransferInfo.argtypes = [ct.c_void_p, ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong), ct.POINTER(ct.c_ulong)]
     theDLL.DTWAIN_GetCapArrayType.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_GetCapContainer.argtypes = [ct.c_void_p, ct.c_long, ct.c_long]
     theDLL.DTWAIN_GetCapContainerEx.argtypes = [ct.c_long, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetCapDataType.argtypes = [ct.c_void_p, ct.c_long]
     theDLL.DTWAIN_GetCapFromName.argtypes = [ct.c_wchar_p]
     theDLL.DTWAIN_GetCapFromNameA.argtypes = [ct.c_char_p]
     theDLL.DTWAIN_GetCapFromNameW.argtypes = [ct.c_wchar_p]
     theDLL.DTWAIN_GetCapOperations.argtypes = [ct.c_void_p, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetCapValues.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetCapValuesEx.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetCapValuesEx2.argtypes = [ct.c_void_p, ct.c_long, ct.c_long, ct.c_long, ct.c_long, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetCaption.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetCaptionA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_GetCaptionW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetCompressionSize.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetCompressionType.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long), ct.c_long]
     theDLL.DTWAIN_GetConditionCodeString.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetConditionCodeStringA.argtypes = [ct.c_long, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_GetConditionCodeStringW.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetContrast.argtypes = [ct.c_void_p, ct.POINTER(ct.c_double)]
     theDLL.DTWAIN_GetContrastString.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetContrastStringA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_GetContrastStringW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetCurrentAcquiredImage.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetCurrentFileName.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetCurrentFileNameA.argtypes = [ct.c_void_p, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_GetCurrentFileNameW.argtypes = [ct.c_void_p, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetCurrentPageNum.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetCurrentRetryCount.argtypes = [ct.c_void_p]
     theDLL.DTWAIN_GetCurrentTwainTriplet.argtypes = [ct.c_void_p, ct.c_void_p, ct.POINTER(ct.c_long), ct.POINTER(ct.c_long), ct.POINTER(ct.c_long), ct.POINTER(ct.c_int64)]
     theDLL.DTWAIN_GetCustomDSData.argtypes = [ct.c_void_p, ct.POINTER(ct.c_ubyte), ct.c_ulong, ct.POINTER(ct.c_ulong), ct.c_long]
     theDLL.DTWAIN_GetDSMFullName.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetDSMFullNameA.argtypes = [ct.c_long, ct.c_char_p, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetDSMFullNameW.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetDeviceEvent.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetDeviceEventEx.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long), ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetDeviceEventInfo.argtypes = [ct.c_void_p, ct.c_long, ct.c_void_p]
     theDLL.DTWAIN_GetDeviceNotifications.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetDeviceTimeDate.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetDeviceTimeDateA.argtypes = [ct.c_void_p, ct.c_char_p]
     theDLL.DTWAIN_GetDeviceTimeDateW.argtypes = [ct.c_void_p, ct.c_wchar_p]
     theDLL.DTWAIN_GetDoubleFeedDetectLength.argtypes = [ct.c_void_p, ct.POINTER(ct.c_double), ct.c_long]
     theDLL.DTWAIN_GetDoubleFeedDetectValues.argtypes = [ct.c_void_p, ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetDuplexType.argtypes = [ct.c_void_p, ct.POINTER(ct.c_long)]
     theDLL.DTWAIN_GetErrorBuffer.argtypes = [ct.POINTER(ct.c_void_p)]
     theDLL.DTWAIN_GetErrorString.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetErrorStringA.argtypes = [ct.c_long, ct.c_char_p, ct.c_long]
     theDLL.DTWAIN_GetErrorStringW.argtypes = [ct.c_long, ct.c_wchar_p, ct.c_long]
     theDLL.DTWAIN_GetExtCapFromName.argtypes = [ct.c_wchar_p]
     theDLL.DTWAIN_GetExtCapFromNameA.argtypes = [ct.c_char_p]
     theDLL.DTWAIN_GetExtCapFromNameW.argtypes = [ct.c_wchar_p]
